--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -2,22 +2,82 @@
 @import 'normalize.css';
 
 :root {
-  --color-text: #fff;
-  --color-high-text: #ff5777;
+  --color-text: #333;
+  --color-high-text: #C84275;
   --color-tint: #C84275;
   --color-background: #fff;
   --font-size: 14px;
   --line-height: 1.5;
 }
 
+/* 把所有标签的内外边距清零 */
+* {
+    margin: 0;
+    padding: 0;
+    /* css3盒子模型 ：不会撑大盒子*/
+    box-sizing: border-box;
+}
 
-*,
-h1 {
-  padding: 0;
-  margin: 0;
+/* em 和 i 斜体的文字不倾斜 */
+em,
+i {
+    font-style: normal;
+}
+
+/* 去掉li 的小圆点 */
+li {
+    list-style: none;
+}
+
+img {
+    /* border 0 照顾低版本浏览器 如果 图片外面包含了链接会有边框的问题 */
+    border: 0;
+    /* 取消图片底侧有空白缝隙的问题 */
+    vertical-align: middle;
+}
+
+button {
+    /* 当我们鼠标经过button 按钮的时候，鼠标变成小手 */
+    cursor: pointer;
 }
 
 a {
-  text-decoration: none;
-  color: black;
+    color: black;
+    text-decoration: none;
 }
+
+button,
+input {
+    /* "\5B8B\4F53" 就是宋体的意思 这样浏览器兼容性比较好 */
+    font-family: Microsoft YaHei, Heiti SC, tahoma, arial, Hiragino Sans GB, "\5B8B\4F53", sans-serif;
+    /* 默认有灰色边框我们需要手动去掉 */
+    border: 0; 
+    outline: none;
+}
+
+body {
+    /* CSS3 抗锯齿形 让文字显示的更加清晰 */
+    -webkit-font-smoothing: antialiased;
+    background-color: #F4F4F4;
+    font: 14px/1 Microsoft YaHei, Heiti SC, tahoma, arial, Hiragino Sans GB, "\5B8B\4F53", sans-serif;
+    color: black;
+}
+
+/*清除浮动，
+个人认为是在下面放一个小小盒子，让上面的盒子正常显示*/
+.clearfix::after {
+    /*元素隐藏*/
+    visibility: hidden;
+    /*清除浮动*/
+    clear: both;
+    display: block;
+    /*插入一个字符串*/
+    content: ".";
+    height: 0;
+}
+
+.clearfix {
+    /*用于ie6以下清除浮动*/
+    *zoom: 1;
+}
+
